# spellcheck

./: .gitignore  MANIFEST.in  README.md  __init__.py  markov.py  pyproject.toml
corpus/dictionary/english/: en_GB-large.txt  en_GB-largeCleaned.txt
corpus/text/: bingusdict.txt  text.txt
spellcheck/: __init__.py  cleaning.py  markov.py  spellcheck.py  trie.py
spellcheck/corpus/dictionary/english/: en_GB-largerCleaned.txt
spellcheck/data/: .gitignore
src/: cleaning.py  markov.py  spellcheck.py  trie.py
